# taller_argentum

./: .gitignore  README.md
client/: CMakeLists.txt  actor.cpp  actor.h  animation_pack.cpp  animation_pack.h  camera.cpp  camera.h  cast_button.cpp  cast_button.h  chat.cpp  chat.h  chat_buffer.cpp  chat_buffer.h  client_config.h  config.json  decoration.cpp  decoration.h  event_factory.cpp  event_factory.h  game.cpp  game.h  game_client.cpp  game_client.h  game_state_monitor.cpp  game_state_monitor.h  game_view.cpp  game_view.h  hud.cpp  hud.h  inventory_buffer.cpp  inventory_buffer.h  loot_buffer.cpp  loot_buffer.h  main.cpp  map.cpp  map_change_buffer.cpp  map_change_buffer.h  map_decorations_buffer.cpp  map_decorations_buffer.h  player_info_monitor.cpp  (+24 more)
client/assets/maps/: forest1.json
client/assets/tilesets/: magecity.json  metadata.json
client/engine/: CMakeLists.txt  actor.cpp  actor.h  animation_pack.cpp  animation_pack.h  asset_loading_error.cpp  asset_loading_error.h  camera.cpp  camera.h  decoration.cpp  decoration.h  engine_config.h  engine_error.cpp  engine_error.h  entity_factory.cpp  entity_factory.h  in_game_bar.cpp  in_game_bar.h  in_game_text.cpp  in_game_text.h  map.cpp  map.h  receive_handler.cpp  receive_handler.h  renderizable_object.cpp  renderizable_object.h  resource_manager.cpp  resource_manager.h  sound_system.cpp  sound_system.h  visual_component.cpp  visual_component.h  visual_config.h  visual_effect.cpp  visual_effect.h
client/engine/ECS/: CMakeLists.txt  component.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  main.cpp
client/engine/SDL/: CMakeLists.txt  sdl_animated_sprite.cpp  sdl_animated_sprite.h  sdl_bitmap_font.cpp  sdl_bitmap_font.h  sdl_bitmap_text.cpp  sdl_bitmap_text.h  sdl_config.h  sdl_error.h  sdl_music.cpp  sdl_music.h  sdl_sfx.cpp  sdl_sfx.h  sdl_text.cpp  sdl_text.h  sdl_texture.cpp  sdl_texture.h  sdl_texture_loader.cpp  sdl_texture_loader.h  sdl_timer.h  sdl_window.cpp  sdl_window.h
client/engine/UI/: CMakeLists.txt  button.cpp  button.h  icon_grid.cpp  icon_grid.h  stat_bar.cpp  stat_bar.h  text_box.cpp  text_box.h  text_input.cpp  text_input.h
client/engine/components/: CMakeLists.txt  position_component.cpp  position_component.h  sound_component.cpp  sound_component.h  stats_component.cpp  stats_component.h  visual_character_component.cpp  visual_character_component.h  visual_npc_component.cpp  visual_npc_component.h
client/include/SDL/: CMakeLists.txt  sdl_animated_sprite.cpp  sdl_animated_sprite.h  sdl_area.h  sdl_config.h  sdl_text.h  sdl_texture.cpp  sdl_texture.h  sdl_timer.cpp  sdl_timer.h  sdl_window.cpp  sdl_window.h
client/ind/: audio.json  fonts.json  sprites.json  textures.json
client/network/: CMakeLists.txt  event_factory.cpp  event_factory.h  receive_handler.cpp  receive_handler.h
client/views/: CMakeLists.txt  cast_button.cpp  cast_button.h  chat.cpp  chat.h  game_view.cpp  game_view.h  hud.cpp  hud.h  login_button.cpp  login_button.h  login_view.cpp  login_view.h  login_view_ui_handler.h  responsive_scaler.cpp  responsive_scaler.h  ui_event_handler.cpp  ui_event_handler.h
client/views/character_creation_view/: CMakeLists.txt  character_creation_view.cpp  character_creation_view.h  creation_ui_event_handler.cpp  creation_ui_event_handler.h  go_back_button.cpp  (+7 more)
server/: CMakeLists.txt  action.cpp  action.h  action_attack.cpp  action_melee_atack.cpp  action_melee_atack.h  action_melee_attack.cpp  action_melee_attack.h  action_move.cpp  action_move.h  attack_handler.cpp  attack_handler.h  attribute_manager.cpp  attribute_manager.h  change_map_handler.cpp  character_manager.cpp  character_manager.h  client_drop_handler.cpp  client_id_set.cpp  client_id_set.h  client_initializer.cpp  client_initializer.h  client_initializer_handler.cpp  client_initializer_handler.h  clients_monitor.cpp  clients_monitor.h  clients_names_monitor.cpp  clients_names_monitor.h  combat_component.cpp  combat_component.h  command_handler.cpp  command_handler.h  configuration_manager.cpp  configuration_manager.h  entity.cpp  entity.h  event_factory.cpp  event_factory.h  game_loop.cpp  game_loop.h  (+40 more)
server/events/: CMakeLists.txt  attack_handler.cpp  attack_handler.h  buy_handler.cpp  buy_handler.h  change_map_handler.cpp  change_map_handler.h  client_drop_handler.cpp  client_drop_handler.h  client_initializer_handler.cpp  client_initializer_handler.h  command_handler.cpp  command_handler.h  creation_handler.cpp  creation_handler.h  deposit_gold_handler.cpp  deposit_gold_handler.h  deposit_item_handler.cpp  deposit_item_handler.h  disconnect_handler.cpp  disconnect_handler.h  drop_loot_handler.cpp  drop_loot_handler.h  event_factory.cpp  event_factory.h  heal_handler.cpp  heal_handler.h  inventory_handler.cpp  inventory_handler.h  list_handler.cpp  list_handler.h  meditate_handler.cpp  meditate_handler.h  movement_handler.cpp  movement_handler.h  pickup_loot_handler.cpp  pickup_loot_handler.h  resuscitate_handler.cpp  resuscitate_handler.h  sell_handler.cpp  (+11 more)
server/game/: CMakeLists.txt  action_attack.cpp  action_attack.h  action_inventory.cpp  action_inventory.h  action_move.cpp  action_move.h  armor.cpp  armor.h  attribute_manager.cpp  attribute_manager.h  bank.cpp  bank.h  combat_component.cpp  combat_component.h  configuration_manager.cpp  configuration_manager.h  entity.cpp  entity.h  entity_factory.cpp  entity_factory.h  experience_component.cpp  experience_component.h  game_loop.cpp  game_loop.h  game_manager.cpp  game_manager.h  inventory.cpp  inventory.h  item.cpp  item.h  item_container.cpp  item_container.h  item_factory.cpp  item_factory.h  map.cpp  map.h  map_log_factory.cpp  map_log_factory.h  map_manager.cpp  (+38 more)
server/ind/: classes.json  config.json  items.json  maps_index.json  mobs.json  monsters.json  npcs.json  races.json  races_graphics.json  random_events.json  stats.json
server/network/: CMakeLists.txt  client_id_set.cpp  client_id_set.h  clients_monitor.cpp  clients_monitor.h  session.cpp  session.h  th_broadcaster.cpp  th_broadcaster.h  th_client_accepter.cpp  th_client_accepter.h
(+2277 files in other folders)
